--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Menu</string>
     <string name="option_one">Option One</string>
+    <string name="action_menu">Action Menu</string>
 </resources>
