--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Menu</string>
     <string name="option_one">Option One</string>
     <string name="action_menu">Action Menu</string>
+    <string name="refresh">Refresh</string>
+    <string name="delete">Delete</string>
 </resources>
